[gd_scene load_steps=9 format=3 uid="uid://bnp5w6nkrm4p6"]

[ext_resource type="Script" path="res://quiz/quiz_controller.gd" id="1_xyxhu"]
[ext_resource type="PackedScene" uid="uid://b8bhlu4cjh0r" path="res://levels/intelligent_city_levels/level_1_intelligent_city.tscn" id="2_5y7yy"]
[ext_resource type="Resource" uid="uid://dfjm641hqh6kb" path="res://quiz/ecologic_city/ecologic_city_quiz_1_theme.tres" id="3_ljd54"]
[ext_resource type="Texture2D" uid="uid://b7m3fgaobuaib" path="res://assets/sprites/effects/Solid_white.png" id="4_ni7ia"]
[ext_resource type="Texture2D" uid="uid://c3sw2qyoynj6h" path="res://assets/sprites/quiz/intelligent_ciy_quiz_bg.png" id="5_dtsdg"]
[ext_resource type="AudioStream" uid="uid://belw4prd8re4t" path="res://assets/audios/sfx/correct.mp3" id="8_bx6b2"]
[ext_resource type="AudioStream" uid="uid://dkxelba8kve87" path="res://assets/audios/sfx/wrong.mp3" id="9_rgi34"]
[ext_resource type="AudioStream" uid="uid://cem7omqs5ar48" path="res://assets/audios/sfx/hit.mp3" id="10_dccxm"]

[node name="EcologicCityQuiz1" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xyxhu")
next_scene = ExtResource("2_5y7yy")
quiz = ExtResource("3_ljd54")
color_right = Color(0.603922, 1, 0.572549, 1)
color_wrong = Color(1, 0.772549, 0.733333, 1)

[node name="Background" type="TextureRect" parent="Control"]
self_modulate = Color(0.392157, 0.686275, 0.627451, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_ni7ia")

[node name="CardBackground" type="TextureRect" parent="Control/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_dtsdg")

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/Background/CardBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -491.0
offset_top = -328.5
offset_right = 507.0
offset_bottom = 262.5
grow_horizontal = 2
grow_vertical = 2
rotation = 0.0174533

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Background/CardBackground/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="QuestionText" type="Label" parent="Control/Background/CardBackground/VBoxContainer2/VBoxContainer"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Pergunta"
horizontal_alignment = 1
autowrap_mode = 2

[node name="VBoxContainerOptions" type="VBoxContainer" parent="Control/Background/CardBackground/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Button1" type="Button" parent="Control/Background/CardBackground/VBoxContainer2/VBoxContainer/VBoxContainerOptions"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "a) Opção 1
"
alignment = 0
autowrap_mode = 2

[node name="Button2" type="Button" parent="Control/Background/CardBackground/VBoxContainer2/VBoxContainer/VBoxContainerOptions"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "b) Opção 1
"
alignment = 0
autowrap_mode = 2

[node name="Button3" type="Button" parent="Control/Background/CardBackground/VBoxContainer2/VBoxContainer/VBoxContainerOptions"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "c) Opção 1
"
alignment = 0
autowrap_mode = 2

[node name="LabelExplanation" type="Label" parent="Control/Background/CardBackground/VBoxContainer2/VBoxContainer"]
self_modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(0, 110)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Explicação da resposta certa"
autowrap_mode = 2

[node name="AudioCorrect" type="AudioStreamPlayer2D" parent="Control/Background/CardBackground"]
stream = ExtResource("8_bx6b2")
bus = &"SFX"

[node name="AudioWrong" type="AudioStreamPlayer2D" parent="Control/Background/CardBackground"]
stream = ExtResource("9_rgi34")
bus = &"SFX"

[node name="NextQuestionButton" type="Button" parent="Control/Background/CardBackground"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -148.5
offset_top = -153.0
offset_right = 148.5
offset_bottom = -102.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
text = "Próxima Pergunta"

[node name="AudioButton" type="AudioStreamPlayer2D" parent="Control/Background/CardBackground"]
position = Vector2(-344, -29)
stream = ExtResource("10_dccxm")
volume_db = -0.655
pitch_scale = 1.4
bus = &"SFX"

[node name="QuizOver" type="Control" parent="Control/Background"]
visible = false
anchors_preset = 0
offset_left = 342.0
offset_top = 26.0
offset_right = 936.0
offset_bottom = 694.0

[node name="BackGround" type="TextureRect" parent="Control/Background/QuizOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_dtsdg")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Background/QuizOver/BackGround"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.0
offset_top = -94.0
offset_right = 69.0
offset_bottom = 94.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/Background/QuizOver/BackGround/VBoxContainer"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Quiz Finalizado"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Control/Background/QuizOver/BackGround/VBoxContainer"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Você Acertou:"
horizontal_alignment = 1

[node name="Score" type="Label" parent="Control/Background/QuizOver/BackGround/VBoxContainer"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "0/0"
horizontal_alignment = 1

[node name="ContinueButton" type="Button" parent="Control/Background/QuizOver/BackGround/VBoxContainer"]
layout_mode = 2
text = "Continuar"

[connection signal="button_down" from="Control/Background/CardBackground/NextQuestionButton" to="Control" method="_on_next_question_button_button_down"]
[connection signal="button_down" from="Control/Background/QuizOver/BackGround/VBoxContainer/ContinueButton" to="Control" method="_on_continue_button_button_down"]
